# docs/swagger.yaml
@@ -42,6 +42,19 @@ definitions:
     - name
     - url
     type: object
+  monitor.Service:
+    properties:
+      check_interval:
+        type: integer
+      created_at:
+        type: string
+      id:
+        type: integer
+      name:
+        type: string
+      url:
+        type: string
+    type: object
 host: localhost:8080
 info:
   contact: {}
@@ -100,7 +113,7 @@ paths:
       produces:
       - application/json
       responses:
-        "200":
+        "201":
           description: User registered successfully
           schema:
             additionalProperties:
@@ -122,6 +135,28 @@ paths:
       tags:
       - auth
   /services:
+    get:
+      description: Retrieve a list of all services registered for health monitoring
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: List of registered services
+          schema:
+            items:
+              $ref: '#/definitions/monitor.Service'
+            type: array
+        "500":
+          description: Internal server error
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+      security:
+      - BearerAuth: []
+      summary: List all registered services
+      tags:
+      - services
     post:
       consumes:
       - application/json
